# Coursework4

./: .gitignore  README.md  main.py  pyproject.toml
utils/: connector.py  engine.py  headhunter.py  servicebot.py  superjob.py  vacancy.py
